--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -355,27 +355,73 @@ p.section a {
 
 /* tabela */
 table.listing {
-border-left: 0;
-border-bottom: 1px solid #aeb3b6;
+   border-left: 0;
+   border-bottom: 1px solid #aeb3b6;
 }
 table.listing tr.odd th,
 table.listing tr.even th {
-border: 0;
-font-size: 1.2em;
+   border: 0;
+   font-size: 1.2em;
 }
 table.listing tbody tr td {
-background: #f5f5f5;
-border-bottom: 1px dotted #d5d5d5;
+   background: #f5f5f5;
+   border-bottom: 1px dotted #d5d5d5;
 }
 table.listing tbody tr.odd td {
-background: #fff;
+   background: #fff;
 }
 table.listing tbody th {
-font-weight: bold;
-background: #fff;
-border-top: 4px solid #172838 !important;
-border-bottom: 1px solid #79838c!important;
-border-width: 4px 0 1px 0;
+   font-weight: bold;
+   background: #fff;
+   border-top: 4px solid #172838 !important;
+   border-bottom: 1px solid #79838c!important;
+   border-width: 4px 0 1px 0;
+}
+
+/* lista */
+#content ul, #content ol  {
+   list-style-type: disc;
+   margin-left: 0;
+	margin-bottom: 2em;
+   padding: 1em;
+   border: 1px solid #d5d5d5;
+   border-radius: 5px; 
+	-moz-border-radius: 5px; 
+	-webkit-border-radius: 5px; 
+}
+#content li {
+   border-bottom: 1px dotted #d5d5d5;
+   padding: 1em;
+}
+#content ol li {
+   list-style: decimal inside;
+}
+
+/* related */
+#related-items {
+	position: relative;
+	border-radius: 5px; 
+	-moz-border-radius: 5px; 
+	-webkit-border-radius: 5px; 
+	background: #eeeff1;
+	border: 1px solid #d5d5d5;
+}
+#related-items legend, fieldset#folder-listing legend {
+   color: #444;
+   position: absolute;
+   padding: 1em 0 0 0;
+}
+#form-widgets-relatedItems {
+	display: block;
+   margin-top: 3em;
+}
+
+#form-widgets-relatedItems a:link {
+   color: #345276 !important;
+   font-weight: bold;
+   font-size: 1.2em;
+	background: url(../img/icone-link.gif) no-repeat;
+	padding-left: 20px;
 }
 
 /* tags */
