--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -249,12 +249,10 @@ div.position-0 {
 #sobre a {
 	color: #fff;
 }
-#sobre #link-sobre a {
-	padding: 0 10px;
-   border-right: 1px solid #fff;
-}
-#sobre #link-central a {
-	padding: 0 0 0 10px;
+
+#sobre .portalservicos-item a {
+   padding: 0 10px;
+   border-right: 1px solid #fff;	
 }
 
 /* Searchbox */
