--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -499,6 +499,8 @@ dl.portlet dt a:visited {
 .portletNews .portletItem,
 .portletCollection .portletItem {
 	border-bottom: 1px solid #ccc;
+	min-height: 60px;
+	clear: both;
 }
 .portletNews .portletItem a, .portletCollection .portletItem a {
 	display: block;
@@ -740,7 +742,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 .portaltype-collection .tileItem {
     border-bottom: 1px solid #D3D3D3;
 	 position: relative;
-	 padding-left: 20%;
+	 padding-left: 18%;
 	 min-height: 120px;
 }
 
@@ -749,18 +751,20 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 }
 
 .portaltype-collection h2.tileHeadline a.summary {
-    color:#000 !Important;
+    color: #162635 !Important;
+    font-size: 0.8em;
 }
 
 .portaltype-collection .tileImage {
-	 margin-bottom:10px;
+	 margin: 0 1em 0.5em 0 !important;
 	 float: none;
 }
+
 .portaltype-collection .tileImage img {
-	 float: left;
+	 float: left !important;
 }
 .portaltype-collection #content .tileItem .documentByLine {
-    color: #000000;
+    color: #7a8692;
     display: block;
 	 width: 15%;
 	 height: 90px;
@@ -773,7 +777,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 
 .portaltype-collection #content .description {
     color:#666666;
-    font-style: italic;
+	 font-size: 1.1em;
 }
 
 div.listingBar a:link,
@@ -978,19 +982,7 @@ dl.portlet div.listingBar a:link {
 
 }
 
-/* authors tile */
-.author-item div {float: left;}
 
-.author {display:block;width:50%;float:left;}
-
-.author a {color:#000 !Important;}
-
-.author h2 {color:#2c67cd;font-size:14px;font-weight:bold;}
-
-.author .tileImage {
-    float: left;
-    margin: 0 10px 10px 0;
-}
 
 div.listingBar {
     clear: both;
