--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -20,7 +20,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .modal {
-    top: 50% !important;
+  top: 50% !important;
 }
 
 a:link, #content a:link, dl.portlet a:link {
@@ -809,21 +809,111 @@ dl.portlet div.listingBar a:link {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /****************** RESPONSIVE DESIGN MAGIC ******************/
+
+
+/*
+ * Formatação do menu para versão mobile
+ * Author: Igor Prado
+ */
+
+@media only screen and (min-width : 320px) and (max-width : 480px) {
+  #main {
+    max-width: 100% !important;
+  }
+
+  #portal-column-content {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 20px;
+  }
+
+  #portal-column-one .menuTrigger {
+    text-indent: -9999px;
+    background: #065116 url('../img/bg-menu-mobile.png') top right no-repeat;
+    height: 73px;
+    display: block;
+    cursor: pointer;
+  }
+
+  #portal-column-one.ativo .menuTrigger {
+    background-position: bottom right;
+  }
+
+  #portal-column-one {
+    position: relative;
+    top: -16px;
+  }
+
+
+  #portal-column-one .portletWrapper {
+    display: none;
+  }
+
+  #portal-column-one.ativo .portletWrapper {
+    display: block;
+  }
+
+
+  .portletNavigationTree .portletHeader {
+    border-top: none;
+    border-bottom: 1px solid #cdd4d0;
+    color: #00510f;
+    padding: 0;
+    text-transform: uppercase;
+    margin: 0;
+    background: #edeff1;
+    position: relative;
+    cursor: pointer;
+  }
+
+  .portletNavigationTree .portletHeader a span {
+    display: block;
+    background: url('../img/bg-menu-mobile-panel.png') top center no-repeat;
+    width: 37px;
+    height: 36px; 
+    position: absolute;
+    top: 18px;
+    right: 20px;
+  }
+
+  #portal-column-one .ativo .portletHeader a span {
+    background-position: bottom center;
+  }
+
+  
+   #portal-column-one .portletNavigationTree .portletHeader a {
+    padding: 20px 35px;
+    font-size: 24px;
+    color: #00500f !important;
+  }
+
+  #portal-column-one dl.portlet {
+    margin-bottom: 0;
+  }
+
+  #portal-column-one dl.portlet dd {
+    display: none;
+  }
+
+  #portal-column-one dl.ativo dd {
+    display: block;
+  }
+
+  dl.portlet ul.navTreeLevel0 > .navTreeItem {
+    border-top: none;
+    border-bottom: 1px solid #d2d2d2;
+  }
+
+  dl.portlet ul.navTreeLevel0 > .navTreeItem a {
+    color: #454545;
+    font-size: 24px;
+    padding: 20px 35px !important;
+  }
+}
+
+
 
 #searchbt, #nav #seletor {
 	display:none;
