Limpa float dos icones de redes socias

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -322,6 +322,10 @@ div.position-0 {
 
 /* Text styles */
 
+#content-core {
+    clear: both;
+}
+
 .hidden {display: none;}
 
 .clear {clear: both;}
