--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -129,12 +129,12 @@ div.position-0 {
 }
 
 #accessibility a {
-	color: #9bc2a3;
+	color: #dbffe5;
 	margin-right: 8px;
 }
 
 #accessibility span {
-	background: #9bc2a3;
+	background: #9ed5ab;
 	color: #006600;
 	padding: 0 4px;
 }
@@ -143,7 +143,7 @@ div.position-0 {
 #logo {
 	padding: 10px 0 20px 0;
 	float: left;
-   width: 30%;
+    width: 70%;
 }
 
 #logo span {
@@ -162,8 +162,9 @@ div.position-0 {
 }
 #logo #portal-description {
 	font-size: 1.4em;
-	text-transform: capitalize;
+	text-transform: uppercase;
 }
+
 
 /* Personal tools */
 #portal-personaltools {
@@ -184,7 +185,7 @@ div.position-0 {
 }
 
 #language a {
-	color: #9bc2a3;
+	color: #d9ffe3;
 	text-decoration: none;
 	padding: 4px 0 4px 15px;
 	text-transform: uppercase;
@@ -217,7 +218,7 @@ div.position-0 {
 }
 
 #portal-siteactions a {
-	color: #9bc2a3;
+	color: #d9ffe3;
 	text-decoration: none;
 	padding: 4px 0 4px 10px;
 	text-transform: uppercase;
@@ -283,7 +284,7 @@ div.position-0 {
 	-moz-border-radius: 5px 0px 0px 5px; 
 	-webkit-border-radius: 5px 0px 0px 5px; 
 	border: 1px solid #CCCCCC;
-	padding: 0.3em;
+	padding: 0.35em;
 	border-right: none;
 }
 
@@ -315,7 +316,7 @@ div.position-0 {
 
 #content div.newsImageContainer {
     float: left;
-    margin: 0px 1em 0.5em 0;
+    margin: 0.5em 1em 0.5em 0;
 }
 
 #content div.newsImageContainer p.discreet {
