--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -46,8 +46,13 @@ h2, h3, h4, h5, h6 {
 	color: #231f20;
 }
 
-h1, h2, h3 {
+h1 {
 	margin: 0.5em 0 0.5em;
+	line-height: 1.3em;
+}
+h2, h3 {
+    margin: 0 0 0.5em 0;
+    line-height: 1.3em;
 }
 
 p {
