--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -367,14 +367,21 @@ h2.nitfSubtitle {
 p.section {
     color: #2c67cd;
     font-size: 1.4em;
-    font-weight: bold;
     line-height: 1em;
     margin-bottom: 15px !important;
     text-transform: uppercase;
 }
-p.section a {
-    color: #2c67cd;
-}
+
+p.section a {color: #2c67cd;}
+
+/*Cores Section*/
+
+.roxo p.section a {color: #5c1285;}
+.verde p.section a {color: #01971c;}
+.azul-claro p.section a {color: #8fd9e4;}
+.laranja p.section a {color: #e07f48;}
+.bege p.section a {color: #ab6600;}
+
 
 .portaltype-collective-nitf-content h1.documentFirstHeading {
     margin: 5px 0;
@@ -723,11 +730,11 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
     font-size: 3em;
     text-transform: none;
 }
-}
 .tile h2 {
     font-size: 1.3em;
     line-height: 1.3em;
-    margin: 0 0 0.2em !important;
+    margin: 0 0 0 0.2em !important;
+    margin-bottom:0;
 }
 .tile h3 {
     font-size: 1.3em;
@@ -741,11 +748,15 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
     line-height: 1.1em;
     margin-bottom: 10px;
 }
+
 .tile-subtitle {
-    color: #2c67cd;
+    color: #2C67CD;
+    font-family: Trebuchet MS;
     font-weight: bold;
     margin: 0 !important;
+    text-transform: uppercase;
 }
+
 .tile p {
     line-height: 1.4em;
 }
