--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -374,13 +374,7 @@ p.section {
 
 p.section a {color: #2c67cd;}
 
-/*Cores Section*/
 
-.roxo p.section a {color: #5c1285;}
-.verde p.section a {color: #01971c;}
-.azul-claro p.section a {color: #8fd9e4;}
-.laranja p.section a {color: #e07f48;}
-.bege p.section a {color: #ab6600;}
 
 
 .portaltype-collective-nitf-content h1.documentFirstHeading {
@@ -752,10 +746,18 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 .tile-subtitle {
     color: #2C67CD;
     font-family: Trebuchet MS;
-    font-weight: bold;
-    margin: 0 !important;
+    font-weight: normal;
+    margin-bottom: 3px !Important;
     text-transform: uppercase;
 }
+
+/*Cores Section*/
+
+.roxo .tile-subtitle {color: #5c1285;}
+.verde .tile-subtitle {color: #01971c;}
+.azul-claro .tile-subtitle {color: #8fd9e4;}
+.laranja .tile-subtitle {color: #e07f48;}
+.bege .tile-subtitle {color: #ab6600;}
 
 .tile p {
     line-height: 1.4em;
