--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -761,7 +761,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 
 .tile-subtitle {
     color: #2C67CD;
-    font-family: Arial;
+    font-family: Arial, sans-serif;
     font-weight: normal;
     margin-bottom: 3px !Important;
     text-transform: uppercase;
